--- a/Image_Recognition.ipynb
+++ b/Image_Recognition.ipynb
@@ -6,7 +6,7 @@
       "name": "Image Recognition",
       "provenance": [],
       "mount_file_id": "1NkamRZC3aYkj1LW1KQBTNVjxPkI0G8SG",
-      "authorship_tag": "ABX9TyMpZUVe60BY0Q+XDbIW3gTX",
+      "authorship_tag": "ABX9TyPW/Mv/SYoQo6sD7L9EOIoy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
       "metadata": {
         "id": "_PxKCrJZonsw",
         "colab_type": "code",
-        "outputId": "b02b8fa7-56c1-438c-9cf5-533744b2b999",
+        "outputId": "37882539-2124-4da1-a881-6f1f66c362be",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
@@ -46,7 +46,7 @@
         "from keras.layers import Dense\n",
         "\n"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -132,10 +132,10 @@
       "metadata": {
         "id": "cOVl3lj_o87V",
         "colab_type": "code",
-        "outputId": "ad2d902a-cb96-4568-f2c7-323bace38832",
+        "outputId": "65500f63-6b37-48fb-ec68-b97b4e13ad81",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 139
+          "height": 394
         }
       },
       "source": [
@@ -149,8 +149,29 @@
         "classifier.compile(optimizer='adam',loss='binary_crossentropy',metrics=['accuracy'])\n",
         "\n"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:66: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+            "\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:541: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
+            "\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:4432: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
+            "\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:4267: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
+            "\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/optimizers.py:793: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+            "\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:3657: The name tf.log is deprecated. Please use tf.math.log instead.\n",
+            "\n",
+            "WARNING:tensorflow:From /tensorflow-1.15.2/python3.6/tensorflow_core/python/ops/nn_impl.py:183: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Use tf.where in 2.0, which has the same broadcast rule as np.where\n"
+          ],
+          "name": "stdout"
+        },
         {
           "output_type": "stream",
           "text": [
@@ -171,7 +192,7 @@
         "id": "AGnLoDqEwnZS",
         "colab_type": "code",
         "cellView": "both",
-        "outputId": "cf1db605-8f9e-4de0-d716-10235c58bd1d",
+        "outputId": "cdc8ad35-5200-48d7-89a0-c31fa157a34a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -201,7 +222,7 @@
         "    class_mode='binary'\n",
         ")\n"
       ],
-      "execution_count": 0,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -218,7 +239,7 @@
       "metadata": {
         "id": "A87BcJuiy0t-",
         "colab_type": "code",
-        "outputId": "8c6704c7-7d26-48a2-f064-f8be968eb099",
+        "outputId": "2663c77c-e85d-4e43-d310-687474553ed8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 394
@@ -230,37 +251,37 @@
         "\n",
         "classifier.fit_generator(\n",
         "    training_set,\n",
-        "    steps_per_epoch=10,\n",
+        "    steps_per_epoch=8000,\n",
         "    epochs=10,\n",
         "    validation_data = test_set,\n",
-        "    validation_steps = 8\n",
+        "    validation_steps = 800\n",
         ")"
       ],
-      "execution_count": 0,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Epoch 1/10\n",
-            "10/10 [==============================] - 68s 7s/step - loss: 0.6889 - acc: 0.5656 - val_loss: 0.6994 - val_acc: 0.5352\n",
+            "8000/8000 [==============================] - 2228s 278ms/step - loss: 0.3776 - acc: 0.8252 - val_loss: 0.7392 - val_acc: 0.7545\n",
             "Epoch 2/10\n",
-            "10/10 [==============================] - 80s 8s/step - loss: 0.6717 - acc: 0.5625 - val_loss: 0.6788 - val_acc: 0.5273\n",
+            "8000/8000 [==============================] - 2209s 276ms/step - loss: 0.1493 - acc: 0.9414 - val_loss: 1.2708 - val_acc: 0.7448\n",
             "Epoch 3/10\n",
-            "10/10 [==============================] - 58s 6s/step - loss: 0.6527 - acc: 0.5781 - val_loss: 0.6341 - val_acc: 0.6445\n",
+            "8000/8000 [==============================] - 2214s 277ms/step - loss: 0.0816 - acc: 0.9705 - val_loss: 1.3257 - val_acc: 0.7509\n",
             "Epoch 4/10\n",
-            "10/10 [==============================] - 105s 11s/step - loss: 0.6374 - acc: 0.6344 - val_loss: 0.6284 - val_acc: 0.6367\n",
+            "8000/8000 [==============================] - 2213s 277ms/step - loss: 0.0569 - acc: 0.9800 - val_loss: 1.5321 - val_acc: 0.7433\n",
             "Epoch 5/10\n",
-            "10/10 [==============================] - 105s 10s/step - loss: 0.6530 - acc: 0.6219 - val_loss: 0.6221 - val_acc: 0.6641\n",
+            "8000/8000 [==============================] - 2191s 274ms/step - loss: 0.0448 - acc: 0.9846 - val_loss: 1.8673 - val_acc: 0.7411\n",
             "Epoch 6/10\n",
-            "10/10 [==============================] - 104s 10s/step - loss: 0.6311 - acc: 0.6625 - val_loss: 0.6183 - val_acc: 0.6719\n",
+            "8000/8000 [==============================] - 2205s 276ms/step - loss: 0.0381 - acc: 0.9874 - val_loss: 2.0781 - val_acc: 0.7326\n",
             "Epoch 7/10\n",
-            "10/10 [==============================] - 103s 10s/step - loss: 0.6627 - acc: 0.6156 - val_loss: 0.6896 - val_acc: 0.5820\n",
+            "8000/8000 [==============================] - 2221s 278ms/step - loss: 0.0323 - acc: 0.9895 - val_loss: 2.0909 - val_acc: 0.7517\n",
             "Epoch 8/10\n",
-            "10/10 [==============================] - 77s 8s/step - loss: 0.6241 - acc: 0.6437 - val_loss: 0.6113 - val_acc: 0.6625\n",
+            "8000/8000 [==============================] - 2193s 274ms/step - loss: 0.0293 - acc: 0.9904 - val_loss: 2.1253 - val_acc: 0.7454\n",
             "Epoch 9/10\n",
-            "10/10 [==============================] - 15s 2s/step - loss: 0.6393 - acc: 0.6125 - val_loss: 0.6388 - val_acc: 0.6250\n",
+            "8000/8000 [==============================] - 2191s 274ms/step - loss: 0.0266 - acc: 0.9913 - val_loss: 2.0890 - val_acc: 0.7539\n",
             "Epoch 10/10\n",
-            "10/10 [==============================] - 66s 7s/step - loss: 0.6032 - acc: 0.6875 - val_loss: 0.6159 - val_acc: 0.6523\n"
+            "8000/8000 [==============================] - 2193s 274ms/step - loss: 0.0228 - acc: 0.9925 - val_loss: 2.0544 - val_acc: 0.7564\n"
           ],
           "name": "stdout"
         },
@@ -268,13 +289,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7f21ce214a90>"
+              "<keras.callbacks.History at 0x7fca630952e8>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 8
         }
       ]
     },
@@ -283,34 +304,64 @@
       "metadata": {
         "id": "E2Hq2cng5RSL",
         "colab_type": "code",
-        "outputId": "ac5e2305-0cd2-4db8-d5e0-9561417da346",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "colab": {}
       },
       "source": [
         "import numpy as np\n",
         "from keras.preprocessing import image\n",
-        "test_image = image.load_img('/content/drive/My Drive/Convolutional_Neural_Networks/dataset/cat.jpeg',target_size=(64,64))\n",
-        "test_image = image.img_to_array(test_image)\n",
-        "test_image = np.expand_dims(test_image, axis=0)\n",
-        "result = classifier.predict(test_image)\n",
-        "training_set.class_indices\n",
-        "if result[0][0] >= 0.5:\n",
-        "  prediction = 'dog'\n",
-        "else:\n",
-        "  prediction = 'cat'\n",
-        "print(prediction)\n"
+        "import os\n",
+        "from glob import glob\n",
+        "PATH = \"/content/drive/My Drive/Convolutional_Neural_Networks/dataset/test_set/dogs\"\n",
+        "EXT = \"*.jpg\"\n",
+        "\n",
+        "tetcat = [file\n",
+        "                 for path, subdir, files in os.walk(PATH)\n",
+        "                 for file in glob(os.path.join(path, EXT))]\n",
+        "\n",
+        "p = []\n",
+        "for i in tetcat:\n",
+        "  test_image = image.load_img(i,target_size=(64,64))\n",
+        "  test_image = image.img_to_array(test_image)\n",
+        "  test_image = np.expand_dims(test_image, axis=0)\n",
+        "  result = classifier.predict(test_image)\n",
+        "  training_set.class_indices\n",
+        "  if result[0][0] >= 0.5:\n",
+        "    prediction = 'dog'\n",
+        "  else:\n",
+        "    prediction = 'cat'\n",
+        "  p.append(prediction)\n"
       ],
       "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "doeCms52oojO",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "ae55b10d-533c-44d0-e200-e1a74ba77a53"
+      },
+      "source": [
+        "# p.count('cat')\n",
+        "p.count('dog')"
+      ],
+      "execution_count": 24,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "dog\n"
-          ],
-          "name": "stdout"
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "915"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
         }
       ]
     }
